# api/docs/swagger.json
@@ -174,54 +174,6 @@
                 }
             }
         },
-        "/users": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "สร้าง user โดยรับข้อมูลมาจาก Client และ generate uuid ให้ พร้อมส่งรายละเอียดของ user ที่ถูกสร้างกลับไป",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "สร้าง user",
-                "parameters": [
-                    {
-                        "description": "รายละเอียดสำหรับสร้าง User",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/internal_user.CreateUserRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/internal_user.UserResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/wongnok_internal_httputil.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/wongnok_internal_httputil.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/users/{id}": {
             "get": {
                 "security": [
@@ -236,11 +188,10 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "ดีงข้อมูลจาก user แบบรายคน",
+                "summary": "ดึงข้อมูลจาก user แบบรายคน",
                 "parameters": [
                     {
                         "type": "string",
-                        "format": "uuid",
                         "description": "User ID (UUID)",
                         "name": "id",
                         "in": "path",
@@ -315,22 +266,6 @@
                 "refreshToken": {
                     "type": "string",
                     "example": "eyJhbGci..."
-                }
-            }
-        },
-        "internal_user.CreateUserRequest": {
-            "type": "object",
-            "required": [
-                "email"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "example": "somchai@pea.co.th"
-                },
-                "name": {
-                    "type": "string",
-                    "example": "สมชาย ใจดี"
                 }
             }
         },
